<resources>
<string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
<string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
<string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
<string name="com_facebook_like_button_liked">Liked</string>
<string name="com_facebook_like_button_not_liked">Like</string>
<string name="com_facebook_loading">Loading...</string>
<string name="com_facebook_loginview_cancel_action">Cancel</string>
<string name="com_facebook_loginview_log_in_button">Log in</string>
<string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
<string name="com_facebook_loginview_log_out_action">Log out</string>
<string name="com_facebook_loginview_log_out_button">Log out</string>
<string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
<string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
<string name="com_facebook_send_button_text">Send</string>
<string name="com_facebook_share_button_text">Share</string>
<string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
<string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
<string name="common_android_wear_update_text">"%1$s won't run unless you update the Android Wear app."</string>
<string name="common_android_wear_update_title">Update Android Wear</string>
<string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
<string name="common_google_play_services_enable_button">Enable Google Play services</string>
<string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
<string name="common_google_play_services_enable_title">Enable Google Play services</string>
<string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
<string name="common_google_play_services_install_button">Get Google Play services</string>
<string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
<string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
<string name="common_google_play_services_install_title">Get Google Play services</string>
<string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
<string name="common_google_play_services_invalid_account_title">Invalid Account</string>
<string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
<string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
<string name="common_google_play_services_network_error_title">Network Error</string>
<string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
<string name="common_google_play_services_notification_ticker">Google Play services error</string>
<string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
<string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
<string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
<string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
<string name="common_google_play_services_unsupported_title">Google Play services</string>
<string name="common_google_play_services_update_button">Update</string>
<string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
<string name="common_google_play_services_update_title">Update Google Play services</string>
<string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
<string name="common_google_play_services_updating_title">Google Play services are updating</string>
<string name="common_open_on_phone">Open on phone</string>
<string name="messenger_send_button_text">Send</string>
<string name="back_nanas" formatted="false">"5% Nanas Back
Get %s Nanas instantly add into account after redeem this reward."</string>
<string name="btn_back">Back</string>
<string name="btn_cancel">Cancel</string>
<string name="btn_change_country">Change Country</string>
<string name="btn_enter">Enter</string>
<string name="btn_log_out">Log Out</string>
<string name="btn_ok">OK</string>
<string name="btn_redeem">Redeem</string>
<string name="btn_send">Send</string>
<string name="btn_submit">Submit</string>
<string name="btn_update">Update</string>
<string name="btn_yes">Yes</string>
<string name="confirm_paypal_account">"Confirm your PayPal account is correct, we will directly deposit money to your account. You can't change your PayPal account in the future."</string>
<string name="country_au">Australia</string>
<string name="country_br">Brazil</string>
<string name="country_ca">Canada</string>
<string name="country_de">Germany</string>
<string name="country_es">Spain</string>
<string name="country_fr">France</string>
<string name="country_in">India</string>
<string name="country_it">Italy</string>
<string name="country_nl">Netherlands</string>
<string name="country_uk">United Kingdom</string>
<string name="country_us">United States</string>
<string name="country_ww">Worldwide</string>
<string name="dialog_invitation_message">"people to input your invitation code, then you can input other's invitation code once again."</string>
<string name="dialog_share_body">Share this reward on Facebook to get %1$s%2$s Nanas%3$s.</string>
<string name="dialog_share_title">Get 500 Nanas</string>
<string name="earn_at_least">Earn at least</string>
<string name="enable_cookie">You must enable your Safari Cookies to continue:</string>
<string name="error_incorrect_input">Incorrect username or password. If you changed your password recently, you have to login back with the new password.</string>
<string name="error_information">Please check your information and try again.</string>
<string name="error_irregular_activity">Your account has been disabled due to irregular activity.</string>
<string name="error_multiple_devices">You login too many devices with this same account. You are unable to login on this device now. Please contact us if you have any question.</string>
<string name="error_not_working">Something is not working right. We are working hard to fix it. Try again later.</string>
<string name="error_rfn_conflict">Random Free Nanas has already been taken on this device.</string>
<string name="error_rfn_forbidden">You already got your Random Free Nanas for today.</string>
<string name="error_session_expired">Your session has expired. Please log in again.</string>
<string name="error_under_maintenance">We are undergoing maintenance. Please come back later for more rewards.</string>
<string name="feedback">Would you give us some feedback?</string>
<string name="from_offers">from offers.</string>
<string name="get_random_nanas_offer">You get a random free Nanas! Click Go to get %1$s%2$s Nanas%3$s.</string>
<string name="help_step_1">Click on the first AppNana Sync app offer</string>
<string name="help_step_2">Install AppNana Sync &amp; login with your AppNana account</string>
<string name="help_step_3">Come back to appnana.com to see all the unlock offers</string>
<string name="help_step_4">Install and play free apps to get Nana credits</string>
<string name="help_step_5">Cash In Your Nana For Great Rewards!</string>
<string name="help_step_6">When you earn enough Nanas, you can redeem rewards.</string>
<string name="help_step_7">Add To Your Home Screen For Easy Open Next Time</string>
<string name="input_again_body">"Ask %1$s%2$s%3$s people to input your invitation code, then you can input other's invitation code once again."</string>
<string name="input_again_fail_body">Invalid! Both you &amp; your invited friend need to have at least 15,000 Nanas to activate this feature. Please earn up to 15,000 Nanas then input invitation code again.</string>
<string name="input_again_fail_body_1">"Input your friend's invitation code, not yours."</string>
<string name="input_again_fail_body_2">You have already input the invitation code.</string>
<string name="input_again_success_body">"Congratulations! 5 people already input your code. You earn a chance to input other's invitation code now."</string>
<string name="input_again_success_title">Input other’s code</string>
<string name="input_again_title">Input Code Again?</string>
<string name="input_paypal_and_name">Please input your PayPal account and your name.</string>
<string name="install_body">Go to AppStore to install for free?</string>
<string name="invalid_bitcoin_address">You must input a valid Bitcoin address.</string>
<string name="invalid_email_address">Invalid email address. Example: hi@gmail.com</string>
<string name="invalid_input_name">You must input your name.</string>
<string name="invalid_invitation_code">Invalid invitation code.</string>
<string name="invalid_paypal_account">You must input a valid PayPal account.</string>
<string name="invite_least_body">Please send at least 3 invitations to receive bonus Nanas.</string>
<string name="invite_mail_body">Send invitations from your Gmail and receive %s Nanas.</string>
<string name="ios6_cookie_enable">For iOS6, go Settings-&gt;Safari-&gt;Accept Cookies-&gt;choose From visited.</string>
<string name="ios7_cookie_enable">For iOS7, go Settings-&gt;Safari-&gt;Block Cookies-&gt;choose From third parties and advertisers.</string>
<string name="less_than_least">Please send at least 3 invitations to receive bonus Nanas.</string>
<string name="loading">Loading</string>
<string name="must_input_bitcoin_address">You must input your Bitcoin address.</string>
<string name="must_input_password">You must input your password.</string>
<string name="must_input_paypal_account">You must input your PayPal account.</string>
<string name="nana_offers">More Offers</string>
<string name="nana_offers_recommend">Nana Offers (Recommend)</string>
<string name="nana_offers_videos">Video Offers</string>
<string name="nanas_back_body">%s Nanas Back</string>
<string name="nanas_back_body_2">Get %s Nanas instantly add into account after redeem this reward.</string>
<string name="nav_get_nanas">Get Nanas</string>
<string name="nav_invite">Invite</string>
<string name="nav_rewards">Rewards</string>
<string name="no_contacts_body">"You don't have any contacts with this email account. Please try another account."</string>
<string name="no_contacts_title">No Contacts</string>
<string name="no_daily_nanas_body_2">or</string>
<string name="no_daily_nanas_body_4">Ask</string>
<string name="no_daily_nanas_body_5">people to input your invitation code.</string>
<string name="rate_us">Rate us?</string>
<string name="tips_country">Country</string>
<string name="tips_help">help</string>
<string name="tips_how_it_works">How It Works</string>
<string name="ad_banner_on_reward_id">ca-app-pub-4394080710604092/9050790969</string>
<string name="header_currency">Nanas</string>
</resources>