<?xml version='1.0' encoding='utf-8' ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@android:color/white" android:padding="@dimen/base_dimen" android:layout_width="fill_parent" android:layout_height="wrap_content">
	<TextView android:textAppearance="@android:style/TextAppearance.Medium" android:textColor="@color/orange" android:gravity="center_horizontal" android:id="@id/txt_title" android:text="@string/rate_us" style="@style/Theme.MatchWidth" />
	<RatingBar android:layout_gravity="center_horizontal" android:id="@id/rating_bar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:numStars="5" android:stepSize="1.0" />
	<EditText android:id="@id/edit_feedback" android:visibility="gone" android:hint="@string/feedback" style="@style/Theme.MatchWidth.Input.Multi" />
	<LinearLayout android:id="@id/layout_buttons" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/base_dimen">
		<Button android:id="@id/btn_negative" android:layout_marginRight="4.0dip" android:text="@string/btn_cancel" android:layout_weight="1.0" android:layout_marginEnd="4.0dip" style="@style/Theme.Button.White" />
		<Button android:id="@id/btn_positive" android:layout_marginLeft="4.0dip" android:text="@string/btn_submit" android:layout_weight="1.0" android:layout_marginStart="4.0dip" style="@style/Theme.Button.Orange" />
	</LinearLayout>
</LinearLayout>
